<resources>
    <string name="app_name">Amigos-Beta</string>
    <!--<string name="gcm_defaultSenderId">630107011597</string> -->
    <string name="action_settings">Settings</string>


    <string name="search_title">Search</string>


    <string name="send">Send</string>
    <string name="title">Title</string>

    <string name="unknown_error">Unknown Error</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="sign_in_cancelled">Singin cancelled</string>
    <string name="unknown_sign_in_response">unknown signin response</string>
    <string name="credits">Credits</string>
    <string name="number">Number</string>
    <string name="reset_form">Reset Form</string>
    <string name="group_name">Group Name</string>
    <string name="create_new_group">CREATE NEW GROUP</string>
    <string name="title_activity_chat_members">Members</string>
    <string name="title_activity_create_group">New Group</string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="phone_title_text">Phone Number</string>

    <!-- Course Fragment -->
    <string name="description">Description</string>
    <string name="credit_hours">Credit Hours</string>
    <string name="prerequisites">Prerequisites</string>
    <string name="corequisites">Corequisites</string>
    <string name="co_prerequisites">Co-prerequisites</string>
    <string name="course_requirements">Course Requirements</string>
    <string name="add_class">Add Class</string>
    <string name="options">Options</string>
    <string name="delete">delete</string>
    <string name="clear_search">clear search</string>
    <string name="school_search_hint">search schools by name</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="add_friends">Add friends</string>
    <string name="search_class">Search Class</string>
    <string name="my_profile">My Profile</string>
    <string name="title_activity_add_friends">Add Friends</string>
    <string name="search_by_e_mail">Search by e-mail</string>
    <string name="search_contact">Search Contacts</string>
    <string name="search_by_name">Search by name</string>
    <string name="time_stamp">time stamp</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="change_name">Change Name</string>
    <string name="add_members">Add Members</string>
    <string name="members">Members</string>
    <string name="media">Media</string>
    <string name="leave_group">Leave Group</string>
    <string name="add_user">Add user</string>

    <string name="collapsed_image">A single Android robot waving. Symbolises a collapsed
        notification.
    </string>

    <string name="search_match_other">Matches Other Field</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="ALGOLIA_APP_ID">L0P5DF8HKF</string>
    <string name="ALGOLIA_SEARCH_API_KEY">18a73eca581cd261c8f3865c43829514</string>
    <string name="ALGOLIA_INDEX_NAME">USA_UNIV</string>
    <string name="updating_your_cellphone_will_delete_any_information_amigos_has_on_you_related_to_your_old_number_this_action_might_delete_every_contact_and_groups_youalready_have">Updating your cellphone will delete any information Amigos has on you related to your old number. This action might delete every contact, and groups youalready have.</string>
    <string name="avatar_image_view">avatar image view</string>
    <string name="key_group_name">GROUP_NAME</string>
    <string name="group_settings_activity_title">Group Settings</string>
    <string name="places">Places</string>
    <string name="key_group_avatar">GROUP_AVATAR</string>
    <string name="default_group_name">My clique</string>
    <string name="key_allow_notifications">ALLOW_NOTIFICATIONS</string>
    <string name="title_rigntone_settings">Rigntone</string>
    <string name="key_general_group_settings">KEY_GENERAL_GROUP_SETTIGNS</string>
    <string name="title_general_group_settings">General settings</string>
    <string name="join">Join</string>
    <string name="from">From</string>
    <string name="leave_group_body_text">Leaving the group will not delete old messages you have sent. If you decide to re-join the group in the future, you will have to send a request to a current group member.</string>
    <string name="leave_group_title">Leave group?</string>
    <string name="group_invitations">Group Invitations</string>

</resources>
