<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_perm_identity_black_24dp"
            android:tint="@color/button_grey"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_add_friends"
            android:icon="@drawable/ic_friends_add_black_24dp"
            android:tint="@color/button_grey"
            android:title="@string/add_friends" />
        <item
            android:id="@+id/nav_search_class"
            android:icon="@drawable/ic_search_black_24dp"
            android:tint="@color/button_grey"
            android:title="@string/search_class" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:tint="@color/button_grey"
            android:title="@string/title_activity_notifications" />

        <item
            android:id="@+id/nav_group_invitations"
            android:icon="@drawable/invitation_black_24dp"
            android:tint="@color/button_grey"
            android:title="@string/group_invitations"
            app:actionLayout="@layout/notification_counter" />
    </group>

</menu>