<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.design.widget.CoordinatorLayout

        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/search_form_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>


    <Spinner
        android:id="@+id/level_spinner"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:layout_weight="0.41" />

    <Spinner
        android:id="@+id/institution_spinner"
        android:layout_width="131dp"
        android:layout_height="46dp" />

    <Spinner
        android:id="@+id/department_spinner"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:layout_weight="0.03" />

    <Spinner
        android:id="@+id/college_spinner"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:layout_weight="0.11" />


    <Spinner
        android:id="@+id/prefix_spinner"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_weight="0.10"
        android:tag="prefix" />


    <EditText
        android:id="@+id/search_form_number_tv"
        android:layout_width="100dp"
        android:layout_height="48dp"

        android:layout_weight="0.14"
        android:hint="@string/number"
        android:inputType="number"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="294dp" />


    <EditText
        android:id="@+id/search_form_title_tv"
        android:layout_width="274dp"
        android:layout_height="44dp"

        android:hint="@string/title"
        android:inputType="text"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="358dp" />


    <EditText
        android:id="@+id/search_form_credits_tv"
        android:layout_width="wrap_content"
        android:layout_height="48dp"

        android:hint="@string/credits"
        android:inputType="number"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="421dp" />

    <Button
        android:id="@+id/search_form_search_buttom"
        android:layout_width="wrap_content"
        android:layout_height="48dp"

        android:text="@string/lb_search_bar_hint"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="503dp" />

    <Button
        android:id="@+id/search_form_reset_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"

        android:text="@string/reset_form"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="503dp" />


</LinearLayout>




