<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/profile_appbar"
        android:layout_width="match_parent"
        android:layout_height="192dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:toolbarId="@+id/toolbar">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image_circleImageView"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="16dp"
                android:src="@android:drawable/sym_def_app_icon"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                app:layout_collapseMode="pin">

            </de.hdodenhof.circleimageview.CircleImageView>


        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:divider="?attr/dividerHorizontal"
            android:showDividers="middle"
            android:shrinkColumns="1">

            <TableRow>

                <ImageButton
                    android:id="@+id/profile_name_image_button"
                    style="@style/AppTheme.TableRow.Left"
                    android:background="@color/white"
                    android:src="@drawable/ic_perm_identity_black_24dp" />

                <TextView
                    android:id="@+id/profile_name_text_view"
                    style="@style/AppTheme.TableRow.Right"
                    android:text="@string/fui_name_hint" />

            </TableRow>

            <TableRow>

                <ImageButton
                    android:id="@+id/profile_birthday_image_button"
                    style="@style/AppTheme.TableRow.Left"
                    android:background="@color/white"
                    android:src="@drawable/ic_cake_black_24dp" />

                <TextView
                    android:id="@+id/profile_birthday_text_view"
                    style="@style/AppTheme.TableRow.Right"
                    android:background="@drawable/lb_selectable_item_rounded_rect"
                    android:text="@string/birthday" />

            </TableRow>

            <TableRow>

                <ImageButton
                    android:id="@+id/profile_gender_image_button"
                    style="@style/AppTheme.TableRow.Left"
                    android:background="@color/white"
                    android:src="@drawable/ic_gender_male_female" />

                <TextView
                    android:id="@+id/profile_gender_text_view"
                    style="@style/AppTheme.TableRow.Right"
                    android:text="@string/gender" />

            </TableRow>

            <TableRow>

                <ImageButton
                    android:id="@+id/profile_phone_image_button"
                    style="@style/AppTheme.TableRow.Left"
                    android:background="@color/white"
                    android:src="@drawable/ic_phone_android_black_24dp" />

                <TextView
                    android:id="@+id/profile_phone_text_view"
                    style="@style/AppTheme.TableRow.Right"
                    android:background="@drawable/lb_selectable_item_rounded_rect"
                    android:text="@string/hint_phone_number" />

            </TableRow>

            <TableRow>

                <ImageButton
                    android:id="@+id/profile_school_image_button"
                    style="@style/AppTheme.TableRow.Left"
                    android:background="@color/white"
                    android:src="@drawable/ic_school_black_24dp" />

                <TextView
                    android:id="@+id/profile_school_text_view"
                    style="@style/AppTheme.TableRow.Right"
                    android:background="@drawable/lb_selectable_item_rounded_rect"
                    android:text="@string/school_search_hint" />
            </TableRow>
        </TableLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/profile_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:src="@mipmap/ic_camera_white"
        app:fabSize="mini"
        app:layout_anchor="@id/profile_appbar"
        app:layout_anchorGravity="bottom|right|end" />
</android.support.design.widget.CoordinatorLayout>